bugs 1.6